fix: change z-index

--- a/src/app/components/about/about.module.scss
+++ b/src/app/components/about/about.module.scss
@@ -75,7 +75,7 @@
 
 	span {
 		position: relative;
-		z-index: 1000;
+		z-index: 99;
 	}
 
 	&::before {
